# kintai-paccho

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  slackbot_settings.py
.github/workflows/: check.yml
components/: repo.py  requester.py  typing.py  usecase.py
handler/jp/: configuration.py  extra.py  helper.py  time_recorder.py
plugins/: bot.py  decorator.py  employee.py  listener.py  logger.py  requester.py
plugins/components/: configuration.py  extra.py  helper.py  holiday.py  time_recorder.py
test/: mock_web_api_server.py  test_run.py
test/components/: test_repo.py  test_requester.py  test_typing.py  test_usecase.py
test/handler/jp/: test_configuration.py  test_helper.py  test_time_recorder.py
tests/components/: test_repo.py
tests/handler/jp/: test_configuration.py
~/tmp/.kintai_paccho/: employee_config.json  employee_data.json
